compiler/tests/compiler/must_fail/t_14.mil.exp.err
tests/compiler/must_fail/t_14.mil:3:3: 3:4 error: variable y undeclared
  y = x;
  ^^
