compiler/tests/compiler/must_fail/t_14.mil
fn foo() -> stack u64 {
  x : stack u64;
  y = x;
  return x;
}

/*
START:CMD
ARG="print[input]"
END:CMD
*/
